mark WPA3 as compatible

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <label for="enc" class="control-label">Encryption</label>
             <div class="input-group">
                 <select name="enc" id="enc" class="form-control">
-                    <option value="WPA">WPA/WPA2</option>
+                    <option value="WPA">WPA/WPA2/WPA3</option>
                     <option value="WEP">WEP</option>
                     <option value="nopass">None</option>
                 </select>
