document Android 10+ support

--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
         <h2>Supported Scanners</h2>
         <h3>Android</h3>
         <p>
+            The Android Camera App has support for WiFi QR codes since Android 10.
+        </p>
+        <p>
             <a href="https://play.google.com/store/apps/details?id=com.google.zxing.client.android">Barcode Scanner</a> from ZXing.
         </p>
         <p>
