update link to zxing library

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             Huawei phones have a QR code scanner in HiVision mode. This mode has an eye-shaped icon and can be lauched from the lock screen by swiping up or from the camera.
         </p>
         <p>
-            Every other Android Barcode Scanner based on the <a href="https://code.google.com/p/zxing/">ZXing library</a>.
+            Every other Android Barcode Scanner based on the <a href="https://github.com/zxing/zxing">ZXing library</a>.
         </p>
         <h3>iOS</h3>
         <p>
